--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
 	<head>
-		<title>CRUD</title>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<title>CRUD</title>		
 	</head>
 	<body>
 	
@@ -23,10 +22,14 @@
 			</tr>			
 		</table>
 		
+		<div id="data">
+		
+		</div>
+		
 		<script>
 		</script>
-		
-		<script src = "javascript.js"></script>
 		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+		<script src = "index.js"></script>
+		<script src = "javascript.js"></script>
 	</body>
 </html>
