--- a/new.html
+++ b/new.html
@@ -1,7 +1,6 @@
 <html>
 	<head>
 		<title>New</title>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	</head>
 	<body>
 	
@@ -21,11 +20,11 @@
 				<input type="text" class="form-control" name="input3" id="input3" placeholder="Enter information here.">
 			</div>
 				
-			<input onclick = "window.location.href = 'index.html';" type = "submit" value = "Save"/>			
+			<input  type = "submit" value = "Save"/>			
 		</form>
 			
 		<div id = "data"></div>
-		<script src = "javascript.js"></script>
 		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+		<script src = "javascript.js"></script>
 	</body>
 </html>
